Solidify - Material index problem #33742

Closed
opened 2013-01-03 12:38:42 +01:00 by Anna Celarek · 4 comments

%%%--- Operating System, Graphics card ---
Win 7 64bit, GeForce GTX 550Ti

- Blender version with error, and version that worked ---

error in svn r53476
also in official 2.65.0 (r52859)
don't know if it worked in previous versions.

- Short description of error ---

There are two problems actually, but they seem closely connected.

  1. Objects with Solidify Modifier, which are copied, lose the Material Index Offset in that modifier.

  2. After copying/linking the Solidify Modifier itself to another object, the Material Index Offset is reset to 0.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attached file (solidify.blend)

In the file, there is the object "Plane" with materials "yellow", "blue", and"red" assigned to data,
and a solidify modifier with Material Index Offset = 1, Rim = 2 (which makes the back surface blue, and the rim red).
There is another testing object called "Object" with the same three materials and no modifiers.

To recreate problem 1:

Copy (shift D or alt D) "Plane".
The Material Index Offset and Rim are reset to 0 in the new objects (all other modifier properties are maintained) so the rim and backside become yellow.

To recreate problem 2:

Select first "Object" then "Plane".
In the menu Object > Make Links > Modifiers.
The Solidify modifier is properly copied to "Object", except that Material Index Offset and Rim are reset to 0 again and the object remains yellow.

%%%

%%%--- Operating System, Graphics card --- Win 7 64bit, GeForce GTX 550Ti - Blender version with error, and version that worked --- error in svn r53476 also in official 2.65.0 (r52859) don't know if it worked in previous versions. - Short description of error --- There are two problems actually, but they seem closely connected. 1. Objects with Solidify Modifier, which are copied, lose the Material Index Offset in that modifier. 2. After copying/linking the Solidify Modifier itself to another object, the Material Index Offset is reset to 0. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attached file (solidify.blend) In the file, there is the object "Plane" with materials "yellow", "blue", and"red" assigned to data, and a solidify modifier with Material Index Offset = 1, Rim = 2 (which makes the back surface blue, and the rim red). There is another testing object called "Object" with the same three materials and no modifiers. To recreate problem 1: Copy (shift D or alt D) "Plane". The Material Index Offset and Rim are reset to 0 in the new objects (all other modifier properties are maintained) so the rim and backside become yellow. To recreate problem 2: Select first "Object" then "Plane". In the menu Object > Make Links > Modifiers. The Solidify modifier is properly copied to "Object", except that Material Index Offset and Rim are reset to 0 again and the object remains yellow. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I was planning to write about the same thing. I noticed this some time ago and checked that it never worked properly.%%%

%%%I was planning to write about the same thing. I noticed this some time ago and checked that it never worked properly.%%%

%%%fixed r53553.%%%

%%%fixed r53553.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33742
No description provided.