fix [#33742] Solidify - Material index problem missed copying material offset values.